examples/test/testpolicy3832.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3832
  namespace: namespace433
spec:
  podSelector:
    matchLabels:
      key24: value25
      key49: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value17
          key16: value0
      podSelector:
        matchLabels:
          key38: value44
          key1: value14
          key24: value41
